# gitlet

./: .gitignore  Cargo.toml  Readme.md  log.dot
src/: ignore.rs  index.rs  lib.rs  macros.rs  main.rs  object.rs  objects.rs  refs.rs  repository.rs  utils.rs
src/object/: blob.rs  commit.rs  kvlm.rs  reference.rs  tag.rs  tree.rs
src/objects/: blob.rs  commit.rs  kvlm.rs  tag.rs  tree.rs
src/refs/: branch.rs  tag.rs
