[package]
name = "gitlet"
version = "0.1.0"
edition = "2021"
publish = ["rsproxy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.77", registry = "rsproxy" }
clap = { version = "4.4.11", features = ["derive"] }
rust-ini = "0.19"