[package]
name = "gitlet"
version = "0.1.0"
edition = "2021"
publish = ["rsproxy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.77", registry = "rsproxy" }
clap = { version = "4.4.11", features = ["derive"] }
flate2 = { version = "1.0.28", registry = "rsproxy" }
hex = { version = "0.4.3", registry = "rsproxy" }
rust-ini = "0.19"
sha1 = { version = "0.10.6", registry = "rsproxy" }
